--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1000.2",
     "@angular/cli": "^10.0.1"
   }
 }
