--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app.js"
+    "start": "node app.js",
+    "ng": "ng",
+    "build": "ng build",
+    "postinstall": "ng build --aot -prod"
   },
   "repository": {
     "type": "git",
