--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "ng": "ng",
-    "build": "ng build",
-    "postinstall": "ng build --aot -prod"
+    "build": "ng build"
   },
   "repository": {
     "type": "git",
