--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "ng": "ng",
-    "build": "ng serve"
+    "build": "ng serve --serve-path=client"
   },
   "repository": {
     "type": "git",
