--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd confessionlist; node app.js",
-    "postinstall": "ng build --output-path dist"
+    "start": "cd confessionlist; node app.js"
   },
   "repository": {
     "type": "git",
