--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "url": "https://github.com/nskwon/confessionlib/issues"
   },
   "homepage": "https://github.com/nskwon/confessionlib#readme",
+  "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
