--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "@angular-devkit/build-angular": "^0.1000.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.5",
