--- a/package.json
+++ b/package.json
@@ -28,30 +28,26 @@
   "homepage": "https://github.com/nskwon/confessionlib#readme",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.19",
-    "nodemon": "^2.0.4",
+    "@angular-devkit/build-angular": "^0.1000.5",
     "@angular/animations": "~10.0.0",
+    "@angular/cli": "^10.0.5",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "@angular/cli": "^10.0.5",
-    "@angular/compiler-cli": "~10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "body-parser": "^1.19.0",
     "codelyzer": "^6.0.0-next.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -59,11 +55,15 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "mongoose": "^5.12.14",
+    "nodemon": "^2.0.4",
     "protractor": "~7.0.0",
+    "rxjs": "~6.5.5",
     "ts-node": "~8.3.0",
+    "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5",
-    "@angular-devkit/build-angular": "^0.1000.5"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.5",
